@@ -1,1 +1,1 @@
-cdecl @ @ -xc++ @ explain void f(auto) @ 65
+cdecl @ @ -xc++ @ explain void f(auto) @ 0
